# python-isabelle-lsp-client

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml
TASKS/: 01-bug-document-text-branch.md  02-bug-callback-signature.md  03-bug-find-next-offset.md  04-busy-wait-isabelle-ready.md  05-subprocess-shutdown.md  06-dead-methods-in-handler.md  07-lsp-responses-dropped.md  08-command-not-wired-up.md  09-test-coverage.md  10-task-cancellation.md  11-hardcoded-log-path.md  12-typo-documnts.md  13-incomplete-exports.md  14-missing-readme.md  15-update-notification-api.md  16-cleanup-initialized-notification.md  17-use-typed-initialize-params.md
data/: capabilities.json
isabelle_lsp_client/: __init__.py  client.py  document.py  handler.py  isabelle.py  process.py  protocol.py
isabelle_lsp_client/data/: symbols.json
isabelle_lsp_client/examples/: auto_sledge.py
tests/: test_client.py  test_document.py  test_handler.py  test_isabelle.py  test_process.py  test_protocol.py
