[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "isabelle_lsp_client"
version = "0.0.1"
description = "A Language Server Protocol client for Isabelle written in Python."
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Christian Kissig" }
]
dependencies = [
  "mypy>=1.9.0",
  "pydantic>=2.9.0",
  "lsp_client>=0.0.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
lsp_client = {git = "https://github.com/christiankissig/python-lsp-client.git"}

[project.urls]
Homepage = "https://github.com/christiankissig/python-isabelle-lsp-client"
Repository = "https://github.com/christiankissig/python-isabelle-lsp-client"
Documentation = "https://github.com/christiankissig/python-isabelle-lsp-client"

[tool.setuptools]
packages = ['isabelle_lsp_client']

[tool.setuptools.package-data]
isabelle_lsp_client = ['data/*']

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest",
    "pytest-asyncio>=0.22.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
    "ruff>=0.1.6",
    "twine>=4.0.2",
]
test = [
  "annotated-types>=0.7.0",
  "iniconfig>=2.0.0",
  "mypy>=1.9.0",
  "pytest-asyncio>=0.22.0",
  "pytest-cov>=4.1.0",
  "pytest>=8.0.0",
  "ruff>=0.1.6",
  "typing_extensions>=4.12.2",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an asyncio coroutine"
]
addopts = "--strict-markers"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "build/",
    "dist/", 
    "docs/",
    "tests/",
    "venv/",
    ".venv/",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
