[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "isabelle_lsp_client"
version = "0.0.1"
description = "A Language Server Protocol client for Isabelle written in Python."
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Christian Kissig"}]
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/christiankissig/python-isabelle-lsp-client"
Repository = "https://github.com/christiankissig/python-isabelle-lsp-client"
Documentation = "https://github.com/christiankissig/python-isabelle-lsp-client"

[tool.poetry]
packages = [{include = "isabelle_lsp_client"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.9.0"
pydantic = "^2.9.0"
lsp_client = {git = "https://github.com/christiankissig/python-lsp-client.git"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^8.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
twine = "^4.0.2"

[tool.poetry.group.test.dependencies]
annotated-types = "^0.7.0"
iniconfig = "^2.0.0"
mypy = "^1.9.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^4.1.0"
pytest = "^8.0.0"
ruff = "^0.1.6"
typing_extensions = "^4.12.2"

# Keep your existing tool configurations
[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an asyncio coroutine"
]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "build/",
    "dist/", 
    "docs/",
    "tests/",
    "venv/",
    ".venv/",
]

[tool.ruff]
select = ["I"]  # Enable isort rules
fix = true

[tool.ruff.isort]
known-first-party = ["lsp_client"]
force-single-line = false
